live/environments/cadev/cluster/victoriametrics/vm.yaml
# ---
# # Source: victoria-metrics-cluster/templates/podsecuritypolicy.yaml
# apiVersion: policy/v1beta1
# kind: PodSecurityPolicy
# metadata:
  # name: victoria-metricscluster
  # namespace: victoriametrics
  # labels:
    # helm.sh/chart: victoria-metrics-cluster-0.9.29
    # app.kubernetes.io/managed-by: Helm
  # annotations:
    # seccomp.security.alpha.kubernetes.io/allowedProfileNames: 'docker/default'
    # seccomp.security.alpha.kubernetes.io/defaultProfileName:  'docker/default'
# spec:
  # privileged: false
  # allowPrivilegeEscalation: false
  # requiredDropCapabilities:
    # # Default set from Docker, with DAC_OVERRIDE and CHOWN
    # - ALL
  # volumes:
    # - 'configMap'
    # - 'emptyDir'
    # - 'projected'
    # - 'secret'
    # - 'downwardAPI'
    # - 'persistentVolumeClaim'
  # hostNetwork: false
  # hostIPC: false
  # hostPID: false
  # runAsUser:
    # rule: 'RunAsAny'
  # seLinux:
    # rule: 'RunAsAny'
  # supplementalGroups:
    # rule: 'RunAsAny'
  # fsGroup:
    # rule: 'RunAsAny'
  # readOnlyRootFilesystem: false
---
# Source: victoria-metrics-cluster/templates/vminsert-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vminsert
    app.kubernetes.io/name: victoria-metrics-cluster
    app.kubernetes.io/instance: victoria-metrics
    helm.sh/chart: victoria-metrics-cluster-0.9.29
    app.kubernetes.io/managed-by: Helm
  name: victoria-metricscluster-vminsert
  namespace: victoriametrics
spec:
  ports:
    - name: http
      port: 8480
      protocol: TCP
      targetPort: http

  selector:
    app: vminsert
    app.kubernetes.io/name: victoria-metrics-cluster
    app.kubernetes.io/instance: victoria-metrics
  type: "ClusterIP"
---
# Source: victoria-metrics-cluster/templates/vmselect-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vmselect
    app.kubernetes.io/name: victoria-metrics-cluster
    app.kubernetes.io/instance: victoria-metrics
    helm.sh/chart: victoria-metrics-cluster-0.9.29
    app.kubernetes.io/managed-by: Helm
  name: victoria-metricscluster-vmselect
  namespace: victoriametrics
spec:
  ports:
    - name: http
      port: 8481
      protocol: TCP
      targetPort: http
  selector:
    app: vmselect
    app.kubernetes.io/name: victoria-metrics-cluster
    app.kubernetes.io/instance: victoria-metrics
  type: "ClusterIP"
---
# Source: victoria-metrics-cluster/templates/vmstorage-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vmstorage
    app.kubernetes.io/name: victoria-metrics-cluster
    app.kubernetes.io/instance: victoria-metrics
    helm.sh/chart: victoria-metrics-cluster-0.9.29
    app.kubernetes.io/managed-by: Helm
  name: victoria-metricscluster-vmstorage
  namespace: victoriametrics
spec:
  clusterIP: None
  ports:
    - port: 8482
      targetPort: http
      protocol: TCP
      name: http
    - port: 8401
      targetPort: vmselect
      protocol: TCP
      name: vmselect
    - port: 8400
      targetPort: vminsert
      protocol: TCP
      name: vminsert
  selector:
    app: vmstorage
    app.kubernetes.io/name: victoria-metrics-cluster
    app.kubernetes.io/instance: victoria-metrics
---
# Source: victoria-metrics-cluster/templates/vminsert-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vminsert
    app.kubernetes.io/name: victoria-metrics-cluster
    app.kubernetes.io/instance: victoria-metrics
    helm.sh/chart: victoria-metrics-cluster-0.9.29
    app.kubernetes.io/managed-by: Helm
  name: victoria-metricscluster-vminsert
  namespace: victoriametrics
spec:
  selector:
    matchLabels:
      app: vminsert
      app.kubernetes.io/name: victoria-metrics-cluster
      app.kubernetes.io/instance: victoria-metrics
  replicas: 3
  template:
    metadata:
      labels:
        app: vminsert
        app.kubernetes.io/name: victoria-metrics-cluster
        app.kubernetes.io/instance: victoria-metrics
        helm.sh/chart: victoria-metrics-cluster-0.9.29
        app.kubernetes.io/managed-by: Helm
    spec:
      automountServiceAccountToken: true
      containers:
        - name: victoria-metrics-cluster-vminsert
          # image: "victoriametrics/vminsert:v1.77.2-cluster"
          # image: "victoriametrics/vminsert:v1.78.1-cluster"
          image: "docker-local.artifactory.medimpact.com/dockerhub/victoriametrics/vminsert:v1.85.1-cluster"
          imagePullPolicy: "IfNotPresent"
          securityContext:
            runAsUser: 8480
          args:
            # - -replicationFactor=2
            - --storageNode=victoria-metricscluster-vmstorage-0.victoria-metricscluster-vmstorage.victoriametrics.svc.cluster.local:8400
            - --storageNode=victoria-metricscluster-vmstorage-1.victoria-metricscluster-vmstorage.victoriametrics.svc.cluster.local:8400
            - --storageNode=victoria-metricscluster-vmstorage-2.victoria-metricscluster-vmstorage.victoriametrics.svc.cluster.local:8400
            - --storageNode=victoria-metricscluster-vmstorage-3.victoria-metricscluster-vmstorage.victoriametrics.svc.cluster.local:8400
            - --storageNode=victoria-metricscluster-vmstorage-4.victoria-metricscluster-vmstorage.victoriametrics.svc.cluster.local:8400
            
            - --envflag.enable=true
            - --envflag.prefix=VM_
            - --loggerFormat=json
          ports:
            - name: http
              containerPort: 8480
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 5
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            {}
      serviceAccountName: victoria-metricscluster
      volumes:
---
# Source: victoria-metrics-cluster/templates/vmselect-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vmselect
    app.kubernetes.io/name: victoria-metrics-cluster
    app.kubernetes.io/instance: victoria-metrics
    helm.sh/chart: victoria-metrics-cluster-0.9.29
    app.kubernetes.io/managed-by: Helm
  name: victoria-metricscluster-vmselect
  namespace: victoriametrics
spec:
  selector:
    matchLabels:
      app: vmselect
      app.kubernetes.io/name: victoria-metrics-cluster
      app.kubernetes.io/instance: victoria-metrics
  replicas: 3
  template:
    metadata:
      labels:
        app: vmselect
        app.kubernetes.io/name: victoria-metrics-cluster
        app.kubernetes.io/instance: victoria-metrics
        helm.sh/chart: victoria-metrics-cluster-0.9.29
        app.kubernetes.io/managed-by: Helm
    spec:
      automountServiceAccountToken: true
      containers:
        - name: victoria-metrics-cluster-vmselect
          # image: "victoriametrics/vmselect:v1.77.2-cluster"
          # image: "victoriametrics/vmselect:v1.78.1-cluster"
          image: "docker-local.artifactory.medimpact.com/dockerhub/victoriametrics/vmselect:v1.85.1-cluster"
          imagePullPolicy: "IfNotPresent"
          securityContext:
            runAsUser: 8480
          args:
            - "-search.minStalenessInterval=1m"
            - "-search.maxSamplesPerQuery=2000000000"
            - "-dedup.minScrapeInterval=10s"
            - "--cacheDataPath=/cache"
            - --storageNode=victoria-metricscluster-vmstorage-0.victoria-metricscluster-vmstorage.victoriametrics.svc.cluster.local:8401
            - --storageNode=victoria-metricscluster-vmstorage-1.victoria-metricscluster-vmstorage.victoriametrics.svc.cluster.local:8401
            - --storageNode=victoria-metricscluster-vmstorage-2.victoria-metricscluster-vmstorage.victoriametrics.svc.cluster.local:8401
            - --storageNode=victoria-metricscluster-vmstorage-3.victoria-metricscluster-vmstorage.victoriametrics.svc.cluster.local:8401
            - --storageNode=victoria-metricscluster-vmstorage-4.victoria-metricscluster-vmstorage.victoriametrics.svc.cluster.local:8401
            
            - --envflag.enable=true
            - --envflag.prefix=VM_
            - --loggerFormat=json
          ports:
            - name: http
              containerPort: 8481
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 5
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - mountPath: /cache
              name: cache-volume
          resources:
      serviceAccountName: victoria-metricscluster
      volumes:
        - name: cache-volume
          emptyDir: {}
---
# Source: victoria-metrics-cluster/templates/vmstorage-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: vmstorage
    app.kubernetes.io/name: victoria-metrics-cluster
    app.kubernetes.io/instance: victoria-metrics
    helm.sh/chart: victoria-metrics-cluster-0.9.29
    app.kubernetes.io/managed-by: Helm
  name: victoria-metricscluster-vmstorage
  namespace: victoriametrics
spec:
  serviceName: victoria-metricscluster-vmstorage
  selector:
    matchLabels:
      app: vmstorage
      app.kubernetes.io/name: victoria-metrics-cluster
      app.kubernetes.io/instance: victoria-metrics
  replicas: 5
  podManagementPolicy: OrderedReady
  template:
    metadata:
      labels:
        app: vmstorage
        app.kubernetes.io/name: victoria-metrics-cluster
        app.kubernetes.io/instance: victoria-metrics
        helm.sh/chart: victoria-metrics-cluster-0.9.29
        app.kubernetes.io/managed-by: Helm
    spec:
      automountServiceAccountToken: true
      containers:
        - name: victoria-metrics-cluster-vmstorage
          # image: "victoriametrics/vmstorage:v1.77.2-cluster"
          # image: "victoriametrics/vmstorage:v1.78.1-cluster"
          image: "docker-local.artifactory.medimpact.com/dockerhub/victoriametrics/vmstorage:v1.85.1-cluster"
          imagePullPolicy: "IfNotPresent"
          securityContext:
            runAsUser: 8480
            fsGroup: 8480
          args:
            - "-storage.minFreeDiskSpaceBytes=20GB"
            - "-dedup.minScrapeInterval=10s"
            - "--retentionPeriod=30d"
            - "--storageDataPath=/storage"
            - --envflag.enable=true
            - --envflag.prefix=VM_
            - --loggerFormat=json
          ports:
            - name: http
              containerPort: 8482
            - name: vminsert
              containerPort: 8400
            - name: vmselect
              containerPort: 8401
          livenessProbe:
            failureThreshold: 10
            initialDelaySeconds: 30
            periodSeconds: 30
            tcpSocket:
              port: http
            timeoutSeconds: 5
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 15
            timeoutSeconds: 5
          resources: 
            limits:
              cpu: 4000m
          volumeMounts:
            - name: vmstorage-volume
              mountPath: /storage
              subPath: 
      serviceAccountName: victoria-metricscluster
      terminationGracePeriodSeconds: 60
  volumeClaimTemplates:
  - metadata:
      name: vmstorage-volume
    spec:
      storageClassName: itsystems-dev
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 200Gi
      # volumes:
  # volumeClaimTemplates:
    # - metadata:
        # name: vmstorage-volume
      # spec:
        # accessModes:
          # - ReadWriteOnce
        # resources:
          # requests:
            # storage: "8Gi"
