live/environments/cadev/cluster/victoriametrics/5-ing-vmselect.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/auth-realm: Authentication Required - admin
    nginx.ingress.kubernetes.io/auth-secret: victoriametrics-basic-auth
    nginx.ingress.kubernetes.io/auth-type: basic
  name: vmselect
  namespace: victoriametrics
spec:
  ingressClassName: nginx
  rules:
  - host: k8cadev.medimpact.com
    http:
      paths:
      - pathType: Prefix
        path: /vmselect/?(.*)
        backend:
          service:
            name: victoria-metricscluster-vmselect
            port:
              number: 8481
  tls:
  - hosts:
    - k8cadev.medimpact.com
